version MObile bug fixed buttons

--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -63,10 +63,10 @@
     .modalForm{
         display: flex;
         flex-direction: column;
-        position: absolute;
+       z-index: 10;
         background-color: white ;
         position: absolute;
-        height: 95dvh;
+        height: 95vh;
         width: 100vw;
         top: 4%;
      
@@ -77,6 +77,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+     
        
     }
     
@@ -104,6 +105,7 @@
     .mobileViewHomeWrapper{
         display: block;
         padding: 24px;
+        height: 100svh;
      
 
     }
